--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-fade-in": "^2.0.1"
+    "react-fade-in": "^2.0.1",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
