--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mantine/core": "^7.13.0",
     "@mantine/hooks": "^7.13.0",
     "@tabler/icons-react": "^3.17.0",
+    "@types/react-gtm-module": "^2.0.3",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-fade-in": "^2.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-reveal": "^1.2.2"
   },
   "devDependencies": {
